log
Tue 23 Aug 2022 12:08:06 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
3f45e45
Tue 23 Aug 2022 12:17:32 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘suma’:
exercises.c:17:6: error: assignment to ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   17 |     c= a+ b;
      |      ^
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
0b8447f
Tue 23 Aug 2022 12:17:53 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
13412a5
Tue 23 Aug 2022 12:18:47 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
573761f
Tue 23 Aug 2022 12:19:27 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
a2ad152
Tue 23 Aug 2022 12:20:14 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaV2’:
exercises.c:140:6: error: ‘Vector’ has no member named ‘data’
  140 |     c->data[0]= a1+ b1;
      |      ^~
exercises.c:141:6: error: ‘Vector’ has no member named ‘data’
  141 |     c->data[1]= a2+ b2;
      |      ^~
test.c: In function ‘sumaV’:
test.c:244:5: error: ‘main’ is normally a non-static function [-Werror=main]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:266:1: error: expected declaration or statement at end of input
  266 | }
      | ^
At top level:
test.c:244:5: error: ‘main’ defined but not used [-Werror=unused-function]
  244 | int main( int argc, char *argv[] ) {
      |     ^~~~
cc1: all warnings being treated as errors
Compilation failed
d14ef6d
